# RNO

./: .env.example  .gitattributes  .gitignore  LICENSE  LICENSE.md  logger.py  pyproject.toml  readme.md  requirements.txt  run.py
application/: __init__.py  config.py
application/modules/accounts/: forms.py  models.py  requires_clearance.py  routes.py  services.py
application/modules/admin/: routes.py
application/modules/admin/roles/: forms.py  models.py  routes.py  services.py
application/modules/admin/roles/services/: get_roles.py
application/modules/contacts/: notes.md
application/modules/errors/: handlers.py
application/modules/main/: routes.py
application/web/static/: package-lock.json  package.json
application/web/static/css/: _callout.scss  _colors.scss  _env_label.scss  _fonts.scss  _typography.scss  main.css  main.css.map  main.scss
application/web/static/scripts/: dark-mode.js
application/web/templates/: base.html
application/web/templates/accounts/: edit.html  login.html  me.html  register.html
application/web/templates/admin/: dashboard.html
application/web/templates/admin/_macros/: admin_tabs.html
application/web/templates/admin/_partials/: admin-tabs-partial.html
application/web/templates/macros/: action-dropdown.html  form.html  nav-link.html
application/web/templates/main/: index.html
logs/: logs.txt
migrations/versions/: 22da29189e08_initial.py  44c8595968dc_why_isnt_this_working.py  4da95be6c0f2_email.py  d2f631922446_many_to_many.py  e32ba8829bbe_role_account.py  f7d53b31f177_roles.py
(+3 files in other folders)
